# reverie

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/reverie/: __init__.py  character.py  cli.py  combat.py  config.py  game.py  inventory.py  npc.py  quest.py  tts.py  world.py
src/reverie/llm/: __init__.py  client.py  ollama.py  openai.py  prompts.py
src/reverie/storage/: __init__.py  database.py  migrations.py  models.py  world_state.py
src/reverie/ui/: __init__.py  app.py  screens.py  widgets.py
tests/: __init__.py  conftest.py  test_character.py  test_cli.py  test_combat.py  test_config.py  test_game.py  test_integration.py  test_inventory.py  test_llm.py  test_npc.py  test_quest.py  test_storage.py  test_tts.py  test_ui.py  test_world.py  test_world_state.py  test_world_state_integration.py
