[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reverie"
version = "0.1.0"
description = "AI-powered dungeon master for procedurally generated tabletop RPG adventures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Katie", email = "blackabee@gmail.com" }
]
keywords = ["rpg", "ai", "dungeon-master", "game", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
]

dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "aiosqlite>=0.19.0",
    "edge-tts>=6.1.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
reverie = "reverie.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/reverie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
